minimize update with visiblity hidden, api material fixes

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -886,7 +886,6 @@ div.icons-panel-hide {
 .wrapper {
   min-width: 1024px;
   margin: auto;
-  transition: all 0.5s;
 }
 
 .reviewed-comment>span {
@@ -974,23 +973,19 @@ div.icons-panel-hide {
   margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
- 
   overflow-x: hidden;
   margin: auto;
   margin-bottom: 100px;
-
   background-color: #f5f5f5;
   padding: 0px;
   z-index: 2;
   animation: modal-show 0.5s ease-in-out both;
+  transition: min-width, width 0.5s;
 }
-.wrapper{
-  min-width: 60%;
-  
-}
+
 @keyframes modal-show {
   from {
-    transform: none;
+    transform: translate3d(0px, 0px, 0);
   }
   to {
     transform: translate3d(0px, 50px, 0);
